@@ -667,8 +667,8 @@ void reset_cursor(void);
 void edit_add(const filestruct *fileptr, const char *converted, int
 	yval, size_t start);
 void update_line(const filestruct *fileptr, size_t index);
-int need_horizontal_update(size_t old_pww);
-int need_vertical_update(size_t old_pww);
+bool need_horizontal_update(size_t old_pww);
+bool need_vertical_update(size_t old_pww);
 void edit_scroll(scroll_dir direction, ssize_t nlines);
 void edit_redraw(const filestruct *old_current, size_t old_pww);
 void edit_refresh(void);
